nginx-ms/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: team1-tenant1 # Change to your desired namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-storage
          mountPath: /usr/share/nginx/html  # The path where Nginx serves content
      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: my-gp3-pvc  # Change to your PVC name
