nginx-ms/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: team1-tenant1
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: nginx
