nginx-ms/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-route
  namespace: team1-tenant1
spec:
  host: nginx-team1.apps.natwest.priartw.com
  to:
    kind: Service
    name: nginx-service
    weight: 100
  port:
    targetPort: 80
